tenants/base/movy/M6-movy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movy
  namespace: movy-test
spec:
  ingressClassName: "nginx"
  rules:
    - host: movy.test.enixdomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
